@@ -42,6 +42,7 @@ import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import net.serenitybdd.core.Serenity;
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.StringEscapeUtils;
 import org.jetbrains.annotations.NotNull;
 import org.json.JSONObject;
@@ -63,7 +64,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.function.UnaryOperator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.awaitility.Awaitility.await;
 
@@ -80,7 +80,7 @@ public class SerenityReporterCallbacks {
 
     @Getter
     private int currentScenarioDataVariantIndex = -1;
-
+    private String currentScenarioID = "";
     private int currentStepIndex = -1;
 
     private final Pattern showSteps = Pattern.compile(".*TGR (zeige|show) ([\\w|üß ]*)(Banner|banner|text|Text) \"(.*)\""); // NOSONAR
@@ -169,11 +169,19 @@ public class SerenityReporterCallbacks {
     public void handleTestCaseStarted(Event ignoredEvent, ScenarioContextDelegate context) /* NOSONAR */ {
         shouldAbortTestExecution();
 
+        if (StringUtils.isEmpty(currentScenarioID)) {
+            currentScenarioID = context.getCurrentScenarioId();
+        }
+        if (context.getCurrentScenarioId() != null && !context.getCurrentScenarioId().equals(currentScenarioID)) {
+            currentScenarioDataVariantIndex = -1;
+            currentScenarioID = context.getCurrentScenarioId();
+        }
         // TGR
         if (context.isAScenarioOutline()) {
             currentScenarioDataVariantIndex++;
         } else {
             currentScenarioDataVariantIndex = -1;
+            currentScenarioID = context.getCurrentScenarioId();
         }
         currentStepIndex = 0;
         Optional<Feature> currentFeature = featureFrom(context.currentFeaturePath());
@@ -391,7 +399,7 @@ public class SerenityReporterCallbacks {
         String featureName = featureFrom(context.currentFeaturePath()).map(Feature::getName).orElse("?");
         List<MessageMetaDataDto> stepMessagesMetaDataList = new ArrayList<>(LocalProxyRbelMessageListener.getStepRbelMessages()).stream()
             .map(MessageMetaDataDto::createFrom)
-            .collect(Collectors.toList());
+            .toList();
 
         Map<String, String> variantDataMap = context.isAScenarioOutline() ?
             context.getTable().currentRow().toStringMap() : null;
